syntax = "proto3";

package gofoundationv2.v1.example.payment;

option go_package = "gofoundationv2/v1/example;payment";

import "gofoundationv2/v1/gofoundationv2.proto";

// Payment domain model
message Payment {
  // id of the payment
  string id = 1;
  // reference_id for the payment
  string reference_id = 2;
  // amount to be paid in the smallest unit of the currency (e.g., cents, paisa)
  int64 amount = 3;
  // currency code (e.g., USD, INR)
  string currency = 4;
  // description of the payment
  string description = 5;
  // status of the payment (e.g., created, approved, failed)
  string status = 6;
  // payer details
  Payer payer = 7;
  // payee details
  Payee payee = 8;
  // created_at is the timestamp when the payment was created
  int64 created_at = 9;
  // updated_at is the timestamp when the payment was last updated
  int64 updated_at = 10;
  // error block
  gofoundationv2.v1.Error error = 11;
}

// Payer domain model
message Payer {
  // id of the payer
  string id = 1;
  // name of the payer
  string name = 2;
  // vpa (Virtual Payment Address) of the payer
  string vpa = 3;
  // fundsource details of the payer
  Fundsource fundsource = 4;
}

// Payee domain model
message Payee {
  // id of the payee
  string id = 1;
  // name of the payee
  string name = 2;
  // vpa (Virtual Payment Address) of the payee
  string vpa = 3;
  // fundsource details of the payee
  Fundsource fundsource = 4;
}

// Fundsource domain model
message Fundsource {
  // id of the fundsource
  string id = 1;
  // account_number of the fundsource
  string account_number = 2;
  // ifsc code of the fundsource
  string ifsc = 3;
}
